# p2pCommunicator

./: CMakeLists.txt  chunker.c  chunker.h  crc.c  crc.h  main.c  main.h  net-types.h  queue.c  queue.h  user-interface.c  user-interface.h
communicator/: chunk-receive.c  chunk-receive.h  chunk-send.c  chunk-send.h  communicator.h  connector.c  essentials.c  flag-receive.c  flag-receive.h  flag-send.c  flag-send.h  receiver.c  receiver.h  sender.c  sender.h  tools.c
